# AutoMLWhitebox

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ruff.toml  setup.cfg  tox.ini
.github/workflows/: CI.yml  tests_macos.yml  tests_ubuntu.yml  tests_windows.yml
autowoe/: __init__.py
autowoe/lib/: autowoe.py  logging.py
autowoe/lib/cat_encoding/: cat_encoding.py
autowoe/lib/optimizer/: optimizer.py
autowoe/lib/pipelines/: pipeline_feature_special_values.py  pipeline_homotopy.py
autowoe/lib/report/: report.py  report_generator.py
autowoe/lib/report/utilities_images/: utilities_images.py
autowoe/lib/selectors/: composed_selector.py  l1.py  selector_first.py  selector_last.py  utils.py
autowoe/lib/types_handler/: features_checkers_handlers.py  types_handler.py
autowoe/lib/utilities/: cv_split_f.py  eli5_permutation.py  refit.py  s3.py  sql.py  utils.py
autowoe/lib/woe/: woe.py
examples/: Tutorial_1__Basic_usage_and_params.ipynb  Tutorial_2__Dates_and_stat_model.ipynb  Tutorial_3__AutoTyping.ipynb  Tutorial_4__Regression_Task.ipynb  Tutorial_5__Marked_values.ipynb  Tutorial_6__EDA_AllFeats.ipynb
tests/: conftest.py
tests/integration/: test_autotyping.py  test_basic_usage_and_params.py  test_dates_and_stat_model.py  test_eda_allfeatures.py  test_marked_values.py  test_regression_task.py
