[tool.poetry]
name = "AutoWoE"
version = "1.3.3"
description = "Library for automatic interpretable model building (Whitebox AutoML)"
authors = ["Vakhrushev Anton <btbpanda@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/AILab-MLTools/AutoMLWhitebox"
repository = "https://github.com/AILab-MLTools/AutoMLWhitebox"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = ">=3.6.1, <3.10"

pandas = [
  {version = "<=1.1.5", python = ">=3.6.1, <=3.7.0"},
  # {version = "<=1.1.5", python = "==3.7.0"},
  {version = "<=1.3.5", python = ">=3.7.1, <3.8"},
  {version = "<=1.4.3", python = ">=3.8"}
]
scikit-learn = [
  {version = "<=0.24.2", python = ">=3.6.1, <3.7.0"},
  {version = "<=1.0.2", python = ">=3.7.0, <3.8"},
  {version = "<=1.1.1", python = ">=3.8"},
]
lightgbm = "*"
jinja2 = "*"
seaborn = "*"
tqdm = "^4.62.3"
StrEnum = "^0.4.7"


[tool.poetry.dev-dependencies]
black = "20.8b1"
darglint = "1.8.1"
flake8 = "4.0.1"
flake8-docstrings = "1.6.0"
isort = "5.7.0"
pre-commit = "2.15.0"


# jupyter-contrib-nbextensions = "0.5.1"
# jupyter_nbextensions_configurator = "0.4.1"
# mypy = "0.910"
# notebook = "6.4.6"
# pytest = "*"
# sphinx = "*"
# sphinx-rtd-theme = "*"
# tox = "*"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''


[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
filter_files = true
